--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <![endif]-->
 </head>
 
-<body role="document" cz-shortcut-listen="true">
-
+<body role="document" cz-shortcut-listen="true" ng-app="lunch-sky" ng-controller="lunchController as lunchCtrl">
 <!-- Fixed navbar -->
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
@@ -32,153 +31,163 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Lunch Sky</a>
+            <a class="navbar-brand" href="#" ng-click="lunchCtrl.view = 'home'">Lunch Sky</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">Quick Entry</a></li>
-                <li><a href="#about">Full Entry</a></li>
-                <li><a href="#about">Report</a></li>
+                <li ng-click="lunchCtrl.view = 'home'" ng-class="{'active': lunchCtrl.view == 'home'}"><a href="#">Home</a></li>
+                <li ng-click="lunchCtrl.view = 'quick-entry'" ng-class="{'active': lunchCtrl.view == 'quick-entry'}"><a href="#about">Quick Entry</a></li>
+                <li ng-click="lunchCtrl.view = 'full-entry'" ng-class="{'active': lunchCtrl.view == 'full-entry'}"><a href="#about">Full Entry</a></li>
+                <li ng-click="lunchCtrl.view = 'report'" ng-class="{'active': lunchCtrl.view == 'report'}"><a href="#about">Report</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
 </nav>
 
 <div class="container theme-showcase" role="main">
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-        <h1>Next One...</h1>
-        <div class="row">
-            <h2 class="col-md-2">Winga: </h2>
-            <h2 class="col-md-2">-231 </h2>
-        </div>
-        <div class="row">
-            <h2 class="col-md-2">Patrick: </h2>
-            <h2 class="col-md-2">-211 </h2>
-        </div>
-        <div class="row">
-            <h2 class="col-md-2">Leslie: </h2>
-            <h2 class="col-md-2">-121 </h2>
-        </div>
-    </div>
-
-
-    <div class="page-header">
-        <h1>Quick Entry</h1>
-    </div>
-    <div class="row">
-        <button class="btn btn-default btn-lg col-md-6">Winga</button>
-        <button class="btn btn-default btn-lg col-md-6">Patrick</button>
-    </div>
-    <div class="row">
-        <button class="btn btn-default btn-lg col-md-6">Leslie</button>
-        <button class="btn btn-default btn-lg col-md-6">Varian</button>
-    </div>
-
-    <div class="page-header">
-        <h1>Quick Entry - Winga</h1>
-    </div>
-    <div class="row">
-        <button class="btn btn-default btn-lg btn-block">Owed</button>
-        <p>&nbsp;</p>
-        <button class="btn btn-default btn-lg btn-block">Paid</button>
-    </div>
-
-    <div class="page-header">
-        <h1>Quick Entry - Winga owed</h1>
-    </div>
-    <form>
-        <div class="form-group">
-            <div class="input-group">
-                <div class="input-group-addon">$</div>
-                <input type="number" class="form-control" placeholder="Amount">
+    <div class="wrapper" >
+        <!-- Main jumbotron for a primary marketing message or call to action -->
+        <div class="jumbotron" ng-show="lunchCtrl.view == 'home'">
+            <h1>Next One...</h1>
+            <div class="row">
+                <h2 class="col-md-2">Winga: </h2>
+                <h2 class="col-md-2">(231) </h2>
+            </div>
+            <div class="row">
+                <h2 class="col-md-2">Patrick: </h2>
+                <h2 class="col-md-2">(211) </h2>
+            </div>
+            <div class="row">
+                <h2 class="col-md-2">Leslie: </h2>
+                <h2 class="col-md-2">(121) </h2>
             </div>
         </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-lg btn-success btn-block" >Submit</button>
-        </div>
-    </form>
 
-    <div class="page-header">
-        <h1>Full Entry</h1>
-    </div>
-    <form>
-        <div class="row">
-            <div class="col-xs-2">Winga</div>
-            <div class="col-xs-2">
-                <div class="input-group">
-                    <div class="input-group-addon">$</div>
-                    <input type="number" class="form-control" placeholder="Amount">
+        <div ng-show="lunchCtrl.view == 'quick-entry'">
+            <div class="page-header">
+                <h1>Quick Entry</h1>
+            </div>
+            <div class="row">
+                <button class="btn btn-default btn-lg col-md-6" ng-click="lunchCtrl.view='quick-entry-step-2'">Winga</button>
+                <button class="btn btn-default btn-lg col-md-6" ng-click="lunchCtrl.view='quick-entry-step-2'">Patrick</button>
+            </div>
+            <div class="row">
+                <button class="btn btn-default btn-lg col-md-6" ng-click="lunchCtrl.view='quick-entry-step-2'">Leslie</button>
+                <button class="btn btn-default btn-lg col-md-6" ng-click="lunchCtrl.view='quick-entry-step-2'">Varian</button>
+            </div>
+        </div>
+
+        <div ng-show="lunchCtrl.view == 'quick-entry-step-2'">
+            <div class="page-header">
+                <h1>Quick Entry - Winga</h1>
+            </div>
+            <div class="row">
+                <button class="btn btn-default btn-lg btn-block" ng-click="lunchCtrl.view='quick-entry-step-3'">Owed</button>
+                <p>&nbsp;</p>
+                <button class="btn btn-default btn-lg btn-block" ng-click="lunchCtrl.view='quick-entry-step-3'">Paid</button>
+            </div>
+        </div>
+
+        <div ng-show="lunchCtrl.view == 'quick-entry-step-3'">
+            <div class="page-header">
+                <h1>Quick Entry - Winga owed</h1>
+            </div>
+            <form>
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-addon">$</div>
+                        <input type="number" class="form-control input-lg" placeholder="Amount">
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-2">Leslie</div>
-            <div class="col-xs-2">
-                <div class="input-group">
-                    <div class="input-group-addon">$</div>
-                    <input type="number" class="form-control" placeholder="Amount">
+                <div class="form-group">
+                    <button type="submit" class="btn btn-lg btn-success btn-block" >Submit</button>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-2">Patrick</div>
-            <div class="col-xs-2">
-                <div class="input-group">
-                    <div class="input-group-addon">$</div>
-                    <input type="number" class="form-control" placeholder="Amount">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-2">Angus</div>
-            <div class="col-xs-2">
-                <div class="input-group">
-                    <div class="input-group-addon">$</div>
-                    <input type="number" class="form-control" placeholder="Amount">
-                </div>
-            </div>
+            </form>
         </div>
 
-        <p>&nbsp;</p>
+        <div ng-show="lunchCtrl.view == 'full-entry'">
+            <div class="page-header">
+                <h1>Full Entry</h1>
+            </div>
+            <form>
+                <div class="row">
+                    <div class="col-xs-2">Winga</div>
+                    <div class="col-xs-2">
+                        <div class="input-group">
+                            <div class="input-group-addon">$</div>
+                            <input type="number" class="form-control" placeholder="Amount">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-2">Leslie</div>
+                    <div class="col-xs-2">
+                        <div class="input-group">
+                            <div class="input-group-addon">$</div>
+                            <input type="number" class="form-control" placeholder="Amount">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-2">Patrick</div>
+                    <div class="col-xs-2">
+                        <div class="input-group">
+                            <div class="input-group-addon">$</div>
+                            <input type="number" class="form-control" placeholder="Amount">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-2">Angus</div>
+                    <div class="col-xs-2">
+                        <div class="input-group">
+                            <div class="input-group-addon">$</div>
+                            <input type="number" class="form-control" placeholder="Amount">
+                        </div>
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <button type="submit" class="btn btn-lg btn-success btn-block" >Submit</button>
+                <p>&nbsp;</p>
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-lg btn-success btn-block" >Submit</button>
+                </div>
+            </form>
         </div>
-    </form>
 
-    <div class="page-header">
-        <h1>Report</h1>
-    </div>
-    <div>
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Owed / Paid</th>
-                <th>Last payment</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>Winga</td>
-                <td>(321)</td>
-                <td>7 Aug, 2015</td>
-            </tr>
-            <tr>
-                <td>Patrick</td>
-                <td>(231)</td>
-                <td>7 Aug, 2015</td>
-            </tr>
-            <tr>
-                <td>Leslie</td>
-                <td>123</td>
-                <td>7 Aug, 2015</td>
-            </tr>
-            </tbody>
-        </table>
+        <div ng-show="lunchCtrl.view == 'report'">
+            <div class="page-header">
+                <h1>Report</h1>
+            </div>
+            <div>
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Owed / Paid</th>
+                        <th>Last payment</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Winga</td>
+                        <td>(321)</td>
+                        <td>7 Aug, 2015</td>
+                    </tr>
+                    <tr>
+                        <td>Patrick</td>
+                        <td>(231)</td>
+                        <td>7 Aug, 2015</td>
+                    </tr>
+                    <tr>
+                        <td>Leslie</td>
+                        <td>123</td>
+                        <td>7 Aug, 2015</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div> <!-- /container -->
 
@@ -188,3 +197,6 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+
+<script type="text/javascript" src="js/angular.min.js" ></script>
+<script type="text/javascript" src="js/app.js" ></script>
